<resources>
    <string name="app_name">FootNow</string>
    <string name="TextLogin">Iniciar Sesión</string>
    <string name="TextRegistrate">¿No tienes cuenta?</string>
    <string name="TextRegister">Registrate</string>
    <string name="textEmail">Email</string>
    <string name="textPassword">Password</string>
    <string name="userProfile">Tu Perfil</string>
    <string name="txtUserName">Nombre</string>
    <string name="txtAge">Edad</string>
    <string name="txtPosition">Posición</string>
    <string name="txtLevel">Nivel</string>
    <string name="txtFiabilidad">Fiabilidad</string>
    <string name="hora">Hora:</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="plazas">Plazas:</string>



    <string name="datosPartido">Datos del Partido</string>

    <string-array name="posiciones">
        <item>Selecione una posicion</item>



    <string name="numPartidos">Partidos Jugados</string>
    <string name="txtGanados">Ganados</string>
    <string name="txtPerdidos">Perdidos</string>
    <string name="txtEmpatado">Empatados</string>


    
    <string-array name="posicion">



        <item>Portero</item>
        <item>Defensa</item>
        <item>Medio</item>
        <item>Delantero</item>
    </string-array>

</resources>
