<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivity" android:background="@color/colorPrimary">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:cardCornerRadius="@dimen/cornerRadius"
            app:cardBackgroundColor="@color/textPrimary" app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="24dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/userProfile"
              android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
              android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:id="@+id/textView"
              app:layout_constraintHorizontal_bias="0.076"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:cardCornerRadius="@dimen/cornerRadius"
            app:cardBackgroundColor="@color/textPrimary" android:id="@+id/cardView">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/txtUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp" android:id="@+id/name"
                    android:textColor="@color/textDark" app:layout_constraintEnd_toEndOf="@+id/edad"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/edad"/>
            <TextView
                    android:text="@string/txtAge"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp" android:id="@+id/edad"
                    android:textColor="@color/textDark"
                    app:layout_constraintEnd_toEndOf="@+id/posicion" app:layout_constraintTop_toBottomOf="@+id/name"
                    app:layout_constraintBottom_toTopOf="@+id/posicion"/>
            <TextView
                    android:text="@string/txtPosition"
                    android:layout_width="wrap_content"
                    android:layout_height="23dp" android:id="@+id/posicion"
                    android:textColor="@color/textDark"
                    app:layout_constraintEnd_toEndOf="@+id/nivel" app:layout_constraintTop_toBottomOf="@+id/edad"
                    app:layout_constraintBottom_toTopOf="@+id/nivel"/>
            <TextView
                    android:text="@string/txtLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp" android:id="@+id/nivel"
                    android:textColor="@color/textDark"
                    app:layout_constraintEnd_toEndOf="@+id/fiabilidad"
                    app:layout_constraintTop_toBottomOf="@+id/posicion"
                    app:layout_constraintBottom_toTopOf="@+id/fiabilidad"/>
            <TextView
                    android:text="@string/txtFiabilidad"
                    android:layout_width="wrap_content"
                    android:layout_height="23dp" android:id="@+id/fiabilidad"
                    android:textColor="@color/textDark"
                    app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/nivel"/>
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp" tools:srcCompat="@tools:sample/avatars[0]"
                    android:id="@+id/imageView4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintHorizontal_bias="1.0" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp" android:contentDescription="@null"
                    android:layout_marginBottom="8dp"/>
            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content" android:id="@+id/guideline"
                                                        app:layout_constraintGuide_begin="153dp"
                                                        android:orientation="vertical"/>
            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:id="@+id/guideline2"
                                                        app:layout_constraintGuide_begin="231dp"
                                                        android:orientation="vertical"/>
            <TextView
                    android:text="@string/txtUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp" android:id="@+id/txtNombre"
                    android:textColor="@color/textDark" app:layout_constraintStart_toStartOf="@+id/txtEdad"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/txtEdad"/>
            <TextView
                    android:text="@string/txtAge"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp" android:id="@+id/txtEdad"
                    android:textColor="@color/textDark" app:layout_constraintStart_toStartOf="@+id/txtPosicion"
                    app:layout_constraintTop_toBottomOf="@+id/txtNombre"
                    app:layout_constraintBottom_toTopOf="@+id/txtPosicion"/>
            <TextView
                    android:text="@string/txtPosition"
                    android:layout_width="wrap_content"
                    android:layout_height="23dp" android:id="@+id/txtPosicion"
                    android:textColor="@color/textDark" app:layout_constraintStart_toStartOf="@+id/txtNivel"
                    app:layout_constraintTop_toBottomOf="@+id/txtEdad"
                    app:layout_constraintBottom_toTopOf="@+id/txtNivel"/>
            <TextView
                    android:text="@string/txtLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp" android:id="@+id/txtNivel"
                    android:textColor="@color/textDark" app:layout_constraintStart_toStartOf="@+id/txtFiabilidad"
                    app:layout_constraintTop_toBottomOf="@+id/txtPosicion"
                    app:layout_constraintBottom_toTopOf="@+id/txtFiabilidad"/>
            <TextView
                    android:text="@string/txtFiabilidad"
                    android:layout_width="wrap_content"
                    android:layout_height="23dp" android:id="@+id/txtFiabilidad"
                    android:textColor="@color/textDark" app:layout_constraintStart_toStartOf="@+id/guideline"
                    android:layout_marginLeft="12dp" android:layout_marginStart="12dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtNivel"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>