<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="25dp"
        android:background="@color/colorPrimary">


    <androidx.cardview.widget.CardView
            android:layout_marginHorizontal="8dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:background="@color/colorPrimaryDark"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp" app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/colorPrimaryDark">
        <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp" android:id="@+id/txtNomEvent"
                    app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
                    tools:text="Maracana Futol Club" app:layout_constraintStart_toStartOf="@+id/txtHoraEvent"
                    android:layout_marginTop="8dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ubi"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/hora" tools:text="San Bernardino"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/guideline"
                    android:layout_marginLeft="8dp"/>
            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:id="@+id/guideline"
                                                        app:layout_constraintGuide_begin="206dp"
                                                        android:orientation="vertical"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/plazas"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/ubi" tools:text="3/7"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/hora"
                    android:layout_marginRight="8dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="47dp"
                    android:layout_height="17dp"
                    android:id="@+id/hora"
                    tools:text="9:00 am"
                    tools:layout_editor_absoluteY="43dp" app:layout_constraintEnd_toEndOf="@+id/ubi"
                    android:layout_marginEnd="28dp" android:layout_marginRight="28dp"/>
            <TextView
                    android:text="@string/plazas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="136dp" android:id="@+id/txtPlazas" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtUbi" tools:text="Plazas:"/>
            <TextView
                    android:text="@string/ubicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtUbi"
                    app:layout_constraintStart_toStartOf="@+id/txtPlazas" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtHoraEvent" tools:text="@string/ubicacion"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars[10]"
                    android:id="@+id/imageView"/>
            <TextView
                    android:text="@string/hora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtHoraEvent" tools:text="Hora:  "
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtNomEvent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>