<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CrearPartidoActivity" android:background="@color/colorPrimary">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="216dp" tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" tools:text="Copa Cabana Futbol" android:textColor="@color/textPrimary"/>
    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="1.0"
            android:id="@+id/cardView2" app:cardCornerRadius="@dimen/cornerRadius"
            app:cardBackgroundColor="@color/textPrimary">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/plazas"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/ubicacion"
                    app:layout_constraintEnd_toEndOf="@+id/ubicacion"
                    android:textColor="@color/textDark" tools:text="5/7"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" android:id="@+id/txtDatosPatido"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:textColor="@color/textDark"
                    tools:text="@string/datosPartido"/>
            <TextView
                    android:text="@string/hora"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" android:id="@+id/txtHora"
                    app:layout_constraintStart_toStartOf="@+id/txtDatosPatido"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtDatosPatido"
                    android:textColor="@color/textDark"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/hora"
                    app:layout_constraintTop_toTopOf="@+id/txtHora"
                    app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:textColor="@color/textDark" tools:text="9:00 am"/>
            <TextView
                    android:text="cra 9 # 7-26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/ubicacion"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/hora"
                    app:layout_constraintEnd_toEndOf="@+id/hora"
                    android:textColor="@color/textDark"/>
            <TextView
                    android:text="@string/ubicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" android:id="@+id/txtUbi"
                    app:layout_constraintStart_toStartOf="@+id/txtHora"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtHora"
                    android:textColor="@color/textDark"/>
            <TextView
                    android:text="@string/plazas"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" android:id="@+id/txtPlazas"
                    app:layout_constraintStart_toStartOf="@+id/txtUbi"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtUbi"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                    android:textColor="@color/textDark"/>
            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:id="@+id/guideline3"
                                                        app:layout_constraintGuide_begin="145dp"
                                                        android:orientation="vertical"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="183dp"
            tools:context=".MainActivity"
            android:id="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <!-- Dynamic -->

        <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/posiciones" android:layout_marginLeft="10dp" android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <!-- static -->

        <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Registrame"
                android:onClick="getValues"
                app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>